<resources>
    <string name="app_name">ZoomFoods</string>
    <string name="preference_file_key">com.cs407.zoomfoods.PREFERENCE_FILE_KEY</string>

    <!-- activity_Welcome strings -->
    <string name="welcome">"Welcome!"</string>
    <string name="food_quote">"First we eat, then we do everything else" -M.F.K. Fisher</string>

    <!-- activity_Calendar strings -->
    <string name="Calendar">Calendar</string>
    <string name="primary_color">Primary color</string>
    <string name="primary_color_variant">Primary color var</string>
    <string name="secondary_color">Secondary color</string>
    <string name="secondary_color_variant">Secondary color var</string>
    <string name="tertiary_color">Tertiary color</string>
    <string name="tertiary_color_variant">Tertiary color var</string>
    <string name="button">Button</string>
    <string name="email_icon">email icon</string>
    <string name="background">Background</string>
    <string name="surface">Surface</string>
    <string name="Error">Error</string>
    <string name="OnPrimary">On Primary</string>
    <string name="OnSecondary">On Secondary</string>
    <string name="OnTertiary">On Tertiary</string>
    <string name="OnBackground">On Background</string>
    <string name="OnSurface">On Surface</string>
    <string name="OnError">On Error</string>
    <string name="Date">Today\'s Date</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="new_user">New User</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="Zoom_Foods">Zoom Foods</string>
    <string name="menu_label_Learn_More">Learn More</string>
    <string name="menu_label_About_Us">About Us</string>
    <string name="menu_label_Contact_Us">Contact Us</string>
    <string name="persistence">Keep Me Logged In</string>
    <string name="log_out">Logout</string>

    <!-- General/Shared strings -->
    <string name="login">Log in</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get started</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email_hint">Please type your email address</string>
    <string name="password_hint">Please type your password</string>
    <string name="confirmation_hint"> Please Confirm password</string>

    <!-- Strings related to Dashboard -->
    <string name="dashboard">Dashboard</string>
    <string name="view_profile">Profile</string>
    <string name="water_intake">Water Intake</string>
    <string name="view_calendar">Calendar</string>
    <string name="fridge">Fridge</string>
    <string name="food_intake">Food Record</string>

    <!-- Strings related to profile_edit -->
    <string name="customerName">Customer Name</string>
    <string name="birth_date"> Date of Birth</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="existing_users">Existing Users</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="fetch">FETCH</string>
    <string name="User_Welcome">Welcome please edit your profile below:</string>
    <string name="Welcome_back">Welcome back!</string>

    <!-- String related to menu -->
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="toolbar_style">toolbar_style</string>
    <string name="Fridge">Fridge</string>
    <string name="enter_item_to_search">Enter item to search</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="camera">Camera</string>
    <string name="food_icon">food_icon</string>
    <string name="set_expiry_date">Expiry Date</string>
    <string name="save">Save</string>
    <string name="back_to_fridge">Back to Fridge</string>
    <string name="unit_prompt">Unit</string>
    <string name="Quantity">Quantity</string>
    <string name="Freezer">Freezer</string>
    <string name="category_prompt">Category</string>
    <string name="product_name">"Product "</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="add_breakfast">Add Breakfast</string>
    <string name="add_lunch">Add Lunch</string>
    <string name="add_dinner">Add Dinner</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="textview">TextView</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="serving_size_in_grams">Serving size in grams:</string>
    <string name="meal">Meal:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat:</string>

</resources>