<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visible="true"
   >

    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        app:showAsAction="never"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        app:showAsAction="never">
    <menu>
        <item
            android:id="@+id/viewProfile"
            android:title="@string/view_profile"
            app:showAsAction="never"/>

        <item
            android:id="@+id/updateProfile"
            android:title="@string/update_profile"
            app:showAsAction="never"/>
    </menu>
    </item>
    <item
        android:id="@+id/waterIntake"
        android:title="@string/water_intake"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fridge"
        android:title="@string/fridge"
        app:showAsAction="never"/>
    <item
        android:id="@+id/foodRecord"
        android:title="@string/food_intake"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="ifRoom"/>


</menu>