<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:text="@string/Fridge"
        android:textSize="30sp"
        android:layout_marginTop="40sp"
        tools:ignore="TouchTargetSizeCheck"
        android:textAlignment="center"
        />


    <EditText
        android:id="@+id/editTextNewItem"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        tools:ignore="TouchTargetSizeCheck"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="52dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="TouchTargetSizeCheck"
        android:prompt="@string/category_prompt" />
    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/buttonFridge"
            android:layout_width="130sp"
            android:layout_height="40sp"
            android:background="@drawable/btn_shape3"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            tools:ignore="TouchTargetSizeCheck"
            android:text="@string/Fridge" />

        <Button
            android:id="@+id/buttonFreezer"
            android:layout_width="130sp"
            android:layout_height="40sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            tools:ignore="TouchTargetSizeCheck"
            android:background="@drawable/btn_shape3"
            android:text="@string/Freezer" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/Quantity"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinnerUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5sp"
            tools:ignore="TouchTargetSizeCheck"
            android:prompt="@string/unit_prompt" />

        <EditText
            android:id="@+id/editTextExpiryDate"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:focusable="false"
            android:hint="@string/set_expiry_date"
            tools:ignore="TouchTargetSizeCheck"
            android:inputType="date"
            android:autofillHints="@string/set_expiry_date" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="130sp"
            android:layout_height="40sp"
            android:background="@drawable/btn_shape3"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:onClick="onSaveClicked"
            tools:ignore="TouchTargetSizeCheck"
            android:text="@string/save" />



        <Button
            android:id="@+id/buttonBackToFridge"
            android:layout_width="130sp"
            android:layout_height="40sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            android:background="@drawable/btn_shape3"
            android:text="@string/back_to_fridge"
            tools:ignore="TouchTargetSizeCheck"
            />
    </LinearLayout>


</LinearLayout>