<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs407.zoomfoods.FridgeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40sp"
        >
        <TextView
            android:id="@+id/fridge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fridge"
            android:textSize="40sp"
            android:layout_marginTop="20sp"

            android:fontFamily="@font/amaranth"
            android:textColor="@color/shadeDarkDeepGreyBlue"
            />

        <EditText
            android:id="@+id/editTextItem"
            android:layout_width="300sp"
            android:layout_height="50dp"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_item_to_search"/>

        <LinearLayout
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:layout_marginTop="40sp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="130sp"
                android:layout_height="40sp"
                android:layout_marginEnd="10sp"
                android:layout_marginStart="10sp"
                tools:ignore="TouchTargetSizeCheck"
                android:background="@drawable/btn_shape3"
                android:text="@string/search" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="130sp"
                android:layout_height="40sp"
                android:layout_marginEnd="10sp"
                android:background="@drawable/btn_shape3"
                tools:ignore="TouchTargetSizeCheck"
                android:layout_marginStart="10sp"
                android:text="@string/add_product" />

        </LinearLayout>


        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
           />


        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

</LinearLayout>