<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/herbal_spritz"
    tools:context=".DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        app:popupTheme="@style/toolbar_style" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:orientation="horizontal"
            android:layout_marginTop="70sp">
            <Button
                android:id="@+id/btnLogout"
                android:layout_width="90sp"
                android:layout_height="40sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="310sp"
                android:layout_marginEnd="20sp"
                android:hint="@string/log_out"
                android:text="@string/log_out"
                app:backgroundTint="@null"
                android:background="@drawable/btn_shape5"
                android:fontFamily="@font/amaranth"
                android:textSize="11sp"
                tools:ignore="TouchTargetSizeCheck">

            </Button>

        </LinearLayout>


        <TextView
            android:id="@+id/txtMOTD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/amaranth"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="75dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGotoViewProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/greyBlueCool"
                android:backgroundTintMode="src_over"
                android:fontFamily="@font/amaranth"
                android:text="@string/view_profile" />

            <Button
                android:id="@+id/btnGotoWaterIntake"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/amaranth"
                android:foregroundTintMode="src_over"
                android:text="@string/water_intake" />


            <Button
                android:id="@+id/btnGoToFridge"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/amaranth"
                android:foregroundTintMode="src_over"
                android:text="@string/fridge" />

            <Button
                android:id="@+id/btnGoToFoodIntake"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/amaranth"
                android:foregroundTintMode="src_over"
                android:text="@string/food_intake" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>