<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/egg_stack"
    android:backgroundTint="#60FFFFFF"
    android:backgroundTintMode="src_atop"
    android:layout_margin="10dp"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="22dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:layout_marginTop="-110sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/get_Started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vollkorn_semibold"
            android:gravity="top"
            android:text="@string/get_started"
            android:textColor="@color/shadeDeepGreyBlue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="30sp"
            android:autofillHints="emailAddress"
            android:background="@drawable/textfield_shape"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="5sp"
            android:paddingTop="3sp"
            android:paddingEnd="5sp"
            android:text=""
            android:textColor="@color/shadeGreyBlue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/Sign_up_Password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:autofillHints="password"
            android:background="@drawable/textfield_shape"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="5sp"
            android:paddingTop="3sp"
            android:paddingEnd="5sp"
            android:text=""
            android:textColorHint="@color/shadeGreyBlue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginTop="15sp"
            android:background="@drawable/textfield_shape"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:hint="@string/confirmation_hint"
            android:text=""
            android:autofillHints="confirm password"
            android:inputType="textPassword"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:paddingTop="3sp"
            android:textColorHint="@color/shadeGreyBlue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/signup"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_shape3"
            android:fontFamily="@font/amaranth"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
        <Button
            android:id="@+id/login"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:backgroundTint="@null"
            android:background="@drawable/btn_shape2"
            android:fontFamily="@font/amaranth"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>