<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayProfileActivity">

    <LinearLayout

        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
       >

        <TextView
            android:id="@+id/Welcome_Back"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_back"
            android:layout_marginTop="20sp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:autofillHints="username"
            android:hint="@string/first_name"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/greyBlueCool"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingTop="3sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            tools:ignore="LabelFor"
            />

        <TextView
            android:id="@+id/DOB"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:autofillHints="username"
            android:hint="@string/birth_date"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/greyBlueCool"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingTop="3sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            tools:ignore="LabelFor"
            />

        <TextView
            android:id="@+id/emailAddress"
            android:layout_width="300sp"
            android:layout_height="40sp"
            android:autofillHints="username"
            android:hint="@string/email_address"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/greyBlueCool"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingTop="3sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            tools:ignore="LabelFor"
            />

        <include
            layout="@layout/activity_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>