<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parfait"
    android:backgroundTintMode="src_over"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="22dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:layout_marginTop="60sp"
            android:text="@string/welcome_back"
            android:textColor="@color/greyBlueCool"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/text_username"
            android:layout_width="300dp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/amaranth"
            android:layout_marginTop="10sp"
            app:backgroundTint="@null"
            android:background="@drawable/textfield_shape"
            android:inputType="textEmailAddress"
            android:textColor="@color/shadeGreyBlue"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:paddingTop="3sp"
            android:layout_marginBottom="27dp"
            android:hint="@string/email_hint"
            android:autofillHints="emailAddress"
            app:layout_constraintBottom_toTopOf="@+id/text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="300sp"
            android:layout_height="50sp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            app:backgroundTint="@null"
            android:background="@drawable/textfield_shape"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:fontFamily="@font/amaranth"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingStart="5sp"
            android:paddingEnd="5sp"
            android:paddingTop="3sp"
            android:autofillHints="password"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/text_username"
            tools:ignore="TouchTargetSizeCheck"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="-10sp"
            android:text="@string/login"
            android:background="@drawable/btn_shape3"
            android:fontFamily="@font/amaranth"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintBottom_toTopOf="@+id/chkbox_stayLogged"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <CheckBox
            android:id="@+id/chkbox_stayLogged"
            android:layout_width="193dp"
            android:layout_height="30sp"
            android:layout_marginBottom="12dp"
            android:text="@string/persistence"
            android:fontFamily="@font/amaranth"
            android:textColor="@color/trans1_tone_blackberry"
            android:buttonTint="@color/trans1_tone_blackberry"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/btn_newUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            tools:ignore="TouchTargetSizeCheck"/>

        <Button
            android:id="@+id/btn_newUser"

            android:layout_width="200sp"
            android:layout_height="40sp"
            android:layout_marginBottom="340dp"
            android:background="@drawable/btn_shape2"
            app:backgroundTint="@null"
            android:text="@string/new_user"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkbox_stayLogged" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>